--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     :root{
       --bg:#FFFDF6;
       --card:#ffffff;
-      --accent:#00A86B; /* hijau terang */
-      --accent-2:#FFB86B; /* oranye lembut */
+      --accent:#00A86B; /* abu abu */
+      --accent-2:#FFB86B; /* putih */
       --muted:#6b6b6b;
       --radius:14px;
     }
@@ -46,7 +46,7 @@
       <div>
         <h1>Pahlupi</h1>
         <div class="sub">Data Analyst (Pemula) — fokus Excel, dashboard & EDA</div>
-        <div style="margin-top:8px;color:var(--muted);font-size:14px">Email: pahlupi@example.com • LinkedIn: linkedin.com/in/pahlupi</div>
+        <div style="margin-top:8px;color:var(--muted);font-size:14px">Email: pahlupisupon@gmail.com • LinkedIn: linkedin.com/in/pahlupi</div>
       </div>
 
       <div class="contact">
