--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <section class="card">
       <h2 style="margin:0 0 8px 0">Tentang Saya</h2>
-      <p style="margin:0;color:var(--muted)">Saya sedang belajar menjadi Data Analyst. Berpengalaman membuat laporan dan analisis menggunakan Excel, membuat dashboard sederhana, dan melakukan EDA untuk menemukan insight bisnis praktis.</p>
+      <p style="margin:0;color:var(--muted)">Saya belajar menjadi Data Analyst. Berpengalaman membuat laporan dan analisis menggunakan Excel, membuat dashboard sederhana, dan melakukan EDA untuk menemukan insight bisnis praktis.</p>
       <div class="skills" style="margin-top:12px">
         <div class="chip">Excel (Pivot, VLOOKUP)</div>
         <div class="chip">SQL (dasar)</div>
