--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Portofolio — Pahlupi</title>
+  <title>Portofolio — Pahlupi Supon</title>
   <style>
     :root{
       --bg:#FFFDF6;
@@ -57,9 +57,13 @@
 
     <section class="card">
       <h2 style="margin:0 0 8px 0">Tentang Saya</h2>
-      <p style="margin:0;color:var(--muted)">Saya belajar menjadi Data Analyst. Berpengalaman membuat laporan dan analisis menggunakan Excel, membuat dashboard sederhana, dan melakukan EDA untuk menemukan insight bisnis praktis.</p>
+      <p style="margin:0;color:var(--muted)"> Perkenalkan saya Pahlupi Supon, berdomisili di tangerang, adapun keahlian saya, saya terbiasa handle call baik itu dengan customer atau
+ pun dengan team teknisi dilapangan, terbiasa multitasking, dapat mengoperasikan Ms. excel berikut rumus2 nya seperti,
+ vlookup,hlookup,logical if,pivot table dan chart,Pembuatan Dashboard dan Analisa Dasar, saya juga dapat mengoperisikan ms.word untuk pengajuan pembuatan BA,ataupun Surat
+ jalan dan DO, dapat bekerja sama dengan team atapun individu,saya juga aktif mengikuti kelas online untuk pembelajaran dan upgrade
+ diri.</p>
       <div class="skills" style="margin-top:12px">
-        <div class="chip">Excel (Pivot, VLOOKUP)</div>
+        <div class="chip">Excel (Pivot, VLOOKUP, HLOOKUP)</div>
         <div class="chip">SQL (dasar)</div>
         <div class="chip">Google Data Studio</div>
         <div class="chip">Python (pandas)</div>
@@ -96,7 +100,7 @@
       </div>
     </section>
 
-    <footer>© 2025 Pahlupi — Built with ❤️ • GitHub: github.com/Pahlupi</footer>
+    <footer>© 2025 Pahlupi Supon • GitHub: github.com/Pahlupi</footer>
   </div>
 </body>
 </html>
