--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
       <div>
         <h1>Pahlupi</h1>
         <div class="sub">Data Analyst (Pemula) — fokus Excel, dashboard & EDA</div>
-        <div style="margin-top:8px;color:var(--muted);font-size:14px">Email: pahlupisupon@gmail.com • LinkedIn: linkedin.com/in/pahlupi</div>
+        <div style="margin-top:8px;color:var(--muted);font-size:14px">Email: pahlupisupon@gmail.com • LinkedIn: www.linkedin.com/in/pahlupi-supon-718ba4205</div>
       </div>
 
       <div class="contact">
-        <div style="font-weight:600;color:var(--accent)">Siap kerja: freelance / kontrak</div>
-        <a class="download" href="CV_Pahlupi.pdf" target="_blank">Download CV</a>
+        <div style="font-weight:600;color:var(--accent)">Siap kerja: Freelance / Kontrak</div>
+        <a class="Download" href="CV_Pahlupi.pdf" target="_blank">Download CV</a>
       </div>
     </header>
 
@@ -63,10 +63,10 @@
  jalan dan DO, dapat bekerja sama dengan team atapun individu,saya juga aktif mengikuti kelas online untuk pembelajaran dan upgrade
  diri.</p>
       <div class="skills" style="margin-top:12px">
-        <div class="chip">Excel (Pivot, VLOOKUP, HLOOKUP)</div>
+        <div class="chip">MS. Excel (Pivot, VLOOKUP, HLOOKUP)</div>
+        <div class="chip">MS. Word</div>
         <div class="chip">SQL (dasar)</div>
-        <div class="chip">Google Data Studio</div>
-        <div class="chip">Python (pandas)</div>
+        <div class="chip">Google Looker Studio</div>
         <div class="chip">Data Cleaning</div>
       </div>
     </section>
@@ -75,20 +75,20 @@
       <h2 style="margin:0 0 8px 0">Proyek Pilihan</h2>
       <div class="projects">
         <div class="proj">
-          <h3 style="margin:0">Analisis Penjualan & HPP Jus Buah</h3>
-          <p style="margin:6px 0;color:var(--muted)">Menghitung HPP per botol 250ml, model subsidi silang, simulasi margin — Excel (spreadsheet HPP & asumsi biaya).</p>
+          <h3 style="margin:0">Analisa Problem</h3>
+          <p style="margin:6px 0;color:var(--muted)">Menganalisa penyebab terjadinya perform yg menurun dari semua teknisi — Excel .</p>
           <a href="#" target="_blank">Lihat detail</a>
         </div>
 
         <div class="proj">
-          <h3 style="margin:0">Dashboard Laporan Keuangan</h3>
-          <p style="margin:6px 0;color:var(--muted)">Dashboard bulanan pemasukan & pengeluaran, chart trend, ringkasan KPI.</p>
+          <h3 style="margin:0">Dashboard Monitoring</h3>
+          <p style="margin:6px 0;color:var(--muted)">Dashboard dispatch monitoring untuk memantau pergerakan setiap progres, aging, repeat, revisit dan outstanding.</p>
           <a href="#" target="_blank">Lihat dashboard</a>
         </div>
 
         <div class="proj">
-          <h3 style="margin:0">Absensi Berdasarkan Kriteria</h3>
-          <p style="margin:6px 0;color:var(--muted)">Format & logika absensi otomatis menggunakan Google Sheets + formula dan validasi.</p>
+          <h3 style="margin:0">Indikator penilaian pengiriman document</h3>
+          <p style="margin:6px 0;color:var(--muted)">Format & logika pengiriman/penerimaan otomatis menggunakan excel + formula if logical dan validasi.</p>
           <a href="#" target="_blank">Contoh format</a>
         </div>
 
