--- a/index.html
+++ b/index.html
@@ -93,6 +93,18 @@
         </div>
 
         <div class="proj">
+          <h3 style="margin:0">Sertfikasi Diri</h3>
+          <p style="margin:6px 0;color:var(--muted)">
+  CONDITIONAL IF-ELSE IN MICROSOFT EXCEL, MySkill, Nomor: , 2023
+  DATA VISUALIZATION, MySkill, Nomor: , 2023
+  PIVOT TABLE & POWER PIVOT, MySkill, Nomor: , 2023
+  VLOOKUP & INDEX, MATCH, Myskill, Nomor: , 2023
+  Training The 6 Teamwork Essentials, fproject, Nomor: , 2023
+  Inventory Management, Kaweroo, Nomor: , 2023.</p>
+          <a href="#" target="_blank">Contoh format</a>
+        </div>
+
+        <div class="proj">
           <h3 style="margin:0">Chart Readability Improvement</h3>
           <p style="margin:6px 0;color:var(--muted)">Perbaikan label peta/chart agar nama kota terbaca rapi dan jelas di export PDF/PNG.</p>
           <a href="#" target="_blank">Preview</a>
