--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <div class="container">
     <header>
       <div style="text-align: center; margin-top: 20px;">
-  <img src="profile.jpg" alt="Foto Profil" style="width:180px; height:auto; border-radius:50%; border:3px solid #555;">
+  <img src="PROFILE.png" alt="Foto Profil" style="width:180px; height:auto; border-radius:50%; border:3px solid #555;">
 </div>
       <img class="avatar" src="avatar.jpg" alt="Avatar">
       <div>
