--- a/index.html
+++ b/index.html
@@ -42,10 +42,7 @@
 <body>
   <div class="container">
     <header>
-      <div style="text-align: center; margin-top: 20px;">
-  <img src="PROFILE.png" alt="Foto Profil" style="width:180px; height:auto; border-radius:50%; border:3px solid #555;">
-</div>
-      <img class="avatar" src="avatar.jpg" alt="Avatar">
+      <img class="avatar" src="PROFILE.png" alt="Avatar">
       <div>
         <h1>Pahlupi</h1>
         <div class="sub">Data Analyst (Pemula) — fokus Excel, dashboard & EDA</div>
