--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     :root{
       --bg:#FFFDF6;
       --card:#ffffff;
-      --accent:#00A86B; /* abu abu */
+      --accent:#00A86B; /* putih */
       --accent-2:#FFB86B; /* putih */
       --muted:#6b6b6b;
       --radius:14px;
@@ -42,7 +42,7 @@
 <body>
   <div class="container">
     <header>
-      <img class="avatar" src="PROFILE.png" alt="Avatar">
+      <img class="avatar" src="PROFILE.png"
       <div>
         <h1>Pahlupi</h1>
         <div class="sub">Data Analyst (Pemula) — fokus Excel, dashboard & EDA</div>
