--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <body>
   <div class="container">
     <header>
-      <img class="avatar" src="PROFILE.png"
+      <img class="avatar" src="PROFILE.png" alt="">
       <div>
         <h1>Pahlupi</h1>
         <div class="sub">Data Analyst (Pemula) — fokus Excel, dashboard & EDA</div>
