--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <header>
       <img class="avatar" src="PROFILE.png" alt="">
       <div>
-        <h1>Pahlupi</h1>
+        <h1>Pahlupi Supon</h1>
         <div class="sub">Data Analyst (Pemula) — fokus Excel, dashboard & EDA</div>
         <div style="margin-top:8px;color:var(--muted);font-size:14px">Email: pahlupisupon@gmail.com • LinkedIn: www.linkedin.com/in/pahlupi-supon-718ba4205</div>
       </div>
@@ -108,7 +108,6 @@
           <h3 style="margin:0">Chart Readability Improvement</h3>
           <p style="margin:6px 0;color:var(--muted)">Perbaikan label peta/chart agar nama kota terbaca rapi dan jelas di export PDF/PNG.</p>
           <a href="#" target="_blank">Preview</a>
-        
         </div>
       </div>
     </section>
