--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 <body>
   <div class="container">
     <header>
-      <img class="avatar" src="PROFILE.png" alt=" ">
+      <img class="avatar" src="PROFILE.png" alt="Foto Profile"
+      style="width:200px; height:200px; object-fit:cover; border-radius:50%; border:3px solid #555;">
       <div>
         <h1>Pahlupi Supon</h1>
         <div class="sub">Data Analyst (Pemula) — fokus Excel, dashboard & EDA</div>
