--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 <body>
   <div class="container">
     <header>
+      <div style="text-align: center; margin-top: 20px;">
       <img class="avatar" src="PROFILE.png" alt="Foto Profile"
       style="width:200px; height:200px; object-fit:cover; border-radius:50%; border:3px solid #555;">
       <div>
