--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <div class="container">
     <header>
       <div style="text-align: center; margin-top: 20px;">
-      <img class="avatar" src="PROFILE.png" alt="Foto Profile"
+      <img class="avatar" src="PROFILE1.png" alt="Foto Profile"
       style="width:200px; height:200px; object-fit:cover; border-radius:50%; border:1px solid #555;">
       <div>
         <h1>Pahlupi Supon</h1>
