--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     :root{
       --bg:#FFFDF6;
       --card:#ffffff;
-      --accent:#00A86B; /* putih */
-      --accent-2:#FFB86B; /* putih */
+      --accent:#00A86B;
+      --accent-2:#FFB86B;
       --muted:#6b6b6b;
       --radius:14px;
     }
@@ -21,100 +21,51 @@
       -webkit-font-smoothing:antialiased;
     }
     .container{max-width:980px;margin:0 auto}
-    header{display:flex;gap:18px;align-items:center}
-    .avatar{width:96px;height:96px;border-radius:12px;object-fit:cover;box-shadow:0 6px 18px rgba(0,0,0,0.06)}
-    h1{margin:0;font-size:28px}
+    header{display:flex;gap:28px;align-items:center;flex-wrap:wrap;justify-content:center;}
+    .avatar{
+      width:180px;height:180px;object-fit:cover;
+      border-radius:50%;border:3px solid #555;
+      box-shadow:0 6px 18px rgba(0,0,0,0.08)
+    }
+    h1{margin:0;font-size:30px}
     .sub{color:var(--muted);margin-top:6px}
-    .contact{margin-left:auto;text-align:right;font-size:14px}
-    .card{background:var(--card);padding:18px;border-radius:var(--radius);box-shadow:0 6px 24px rgba(0,0,0,0.04);margin-top:18px}
+    .contact{margin-top:8px;font-size:14px}
+    .card{
+      background:var(--card);
+      padding:18px;
+      border-radius:var(--radius);
+      box-shadow:0 6px 24px rgba(0,0,0,0.04);
+      margin-top:18px
+    }
     .skills{display:flex;flex-wrap:wrap;gap:8px;margin-top:8px}
-    .chip{background:linear-gradient(90deg,var(--accent),var(--accent-2));color:white;padding:6px 10px;border-radius:999px;font-size:13px;box-shadow:0 6px 14px rgba(0,0,0,0.06)}
-    .projects{display:grid;grid-template-columns:repeat(auto-fit,minmax(240px,1fr));gap:12px;margin-top:12px}
-    .proj{padding:12px;border-radius:10px;background:linear-gradient(180deg,#fff,#fcfffb);border:1px solid rgba(0,0,0,0.03)}
-    .download{display:inline-block;background:var(--accent);color:white;padding:10px 14px;border-radius:10px;text-decoration:none;margin-top:10px}
+    .chip{
+      background:linear-gradient(90deg,var(--accent),var(--accent-2));
+      color:white;padding:6px 10px;border-radius:999px;font-size:13px;
+      box-shadow:0 6px 14px rgba(0,0,0,0.06)
+    }
+    .projects{
+      display:grid;grid-template-columns:repeat(auto-fit,minmax(240px,1fr));
+      gap:12px;margin-top:12px
+    }
+    .proj{
+      padding:12px;border-radius:10px;
+      background:linear-gradient(180deg,#fff,#fcfffb);
+      border:1px solid rgba(0,0,0,0.03)
+    }
+    .download{
+      display:inline-block;background:var(--accent);
+      color:white;padding:10px 14px;border-radius:10px;
+      text-decoration:none;margin-top:10px
+    }
     footer{margin-top:20px;color:var(--muted);font-size:13px;text-align:center}
     @media(max-width:600px){
-      header{flex-direction:column;align-items:flex-start}
-      .contact{margin-left:0;text-align:left}
+      header{flex-direction:column;align-items:center;text-align:center}
     }
   </style>
 </head>
 <body>
   <div class="container">
+
     <header>
-      <div style="text-align: center; margin-top: 20px;">
-      <img class="avatar" src="PROFILE1.png" alt="Foto Profile"
-      style="width:200px; height:200px; object-fit:cover; border-radius:50%; border:1px solid #555;">
-      <div>
-        <h1>Pahlupi Supon</h1>
-        <div class="sub">Data Analyst (Pemula) — fokus Excel, dashboard & EDA</div>
-        <div style="margin-top:8px;color:var(--muted);font-size:14px">Email: pahlupisupon@gmail.com • LinkedIn: www.linkedin.com/in/pahlupi-supon-718ba4205</div>
-      </div>
-
-      <div class="contact">
-        <div style="font-weight:600;color:var(--accent)">Siap kerja: Freelance / Kontrak</div>
-        <a class="Download" href="CV_Pahlupi.pdf" target="_blank">Download CV</a>
-      </div>
-    </header>
-
-    <section class="card">
-      <h2 style="margin:0 0 8px 0">Tentang Saya</h2>
-      <p style="margin:0;color:var(--muted)"> Perkenalkan saya Pahlupi Supon, berdomisili di tangerang, adapun keahlian saya, saya terbiasa handle call baik itu dengan customer atau
- pun dengan team teknisi dilapangan, terbiasa multitasking, dapat mengoperasikan Ms. excel berikut rumus2 nya seperti,
- vlookup,hlookup,logical if,pivot table dan chart,Pembuatan Dashboard dan Analisa Dasar, saya juga dapat mengoperisikan ms.word untuk pengajuan pembuatan BA,ataupun Surat
- jalan dan DO, dapat bekerja sama dengan team atapun individu,saya juga aktif mengikuti kelas online untuk pembelajaran dan upgrade
- diri.</p>
-      <div class="skills" style="margin-top:12px">
-        <div class="chip">MS. Excel (Pivot, VLOOKUP, HLOOKUP)</div>
-        <div class="chip">MS. Word</div>
-        <div class="chip">SQL (dasar)</div>
-        <div class="chip">Google Looker Studio</div>
-        <div class="chip">Data Cleaning</div>
-      </div>
-    </section>
-
-    <section class="card">
-      <h2 style="margin:0 0 8px 0">Proyek Pilihan</h2>
-      <div class="projects">
-        <div class="proj">
-          <h3 style="margin:0">Analisa Problem</h3>
-          <p style="margin:6px 0;color:var(--muted)">Menganalisa penyebab terjadinya perform yg menurun dari semua teknisi — Excel .</p>
-          <a href="#" target="_blank">Lihat detail</a>
-        </div>
-
-        <div class="proj">
-          <h3 style="margin:0">Dashboard Monitoring</h3>
-          <p style="margin:6px 0;color:var(--muted)">Dashboard dispatch monitoring untuk memantau pergerakan setiap progres, aging, repeat, revisit dan outstanding.</p>
-          <a href="#" target="_blank">Lihat dashboard</a>
-        </div>
-
-        <div class="proj">
-          <h3 style="margin:0">Indikator penilaian pengiriman document</h3>
-          <p style="margin:6px 0;color:var(--muted)">Format & logika pengiriman/penerimaan otomatis menggunakan excel + formula if logical dan validasi.</p>
-          <a href="#" target="_blank">Contoh format</a>
-        </div>
-
-        <div class="proj">
-          <h3 style="margin:0">Sertfikasi Diri</h3>
-          <p style="margin:6px 0;color:var(--muted)">
-  CONDITIONAL IF-ELSE IN MICROSOFT EXCEL, MySkill, Nomor: , 2023
-  DATA VISUALIZATION, MySkill, Nomor: , 2023
-  PIVOT TABLE & POWER PIVOT, MySkill, Nomor: , 2023
-  VLOOKUP & INDEX, MATCH, Myskill, Nomor: , 2023
-  Training The 6 Teamwork Essentials, fproject, Nomor: , 2023
-  Inventory Management, Kaweroo, Nomor: , 2023.</p>
-          <a href="#" target="_blank">Contoh format</a>
-        </div>
-
-         <div class="proj">
-          <h3 style="margin:0">Chart Readability Improvement</h3>
-          <p style="margin:6px 0;color:var(--muted)">Perbaikan label peta/chart agar nama kota terbaca rapi dan jelas di export PDF/PNG.</p>
-          <a href="#" target="_blank">Preview</a>
-        </div>
-      </div>
-    </section>
-
-    <footer>© 2025 Pahlupi Supon • GitHub: github.com/Pahlupi</footer>
-  </div>
-</body>
-</html>
+      <!-- FOTO PROFIL -->
+      <img class="avatar" src="PROFILE1.png" alt="Foto Profil">
