--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <body>
   <div class="container">
     <header>
-      <img class="avatar" src="avatar.jpg" alt="Avatar">
+      <img class="avatar" src="PROFILE1.png" alt="Avatar">
       <div>
         <h1>Pahlupi</h1>
         <div class="sub">Data Analyst (Pemula) — fokus Excel, dashboard & EDA</div>
