--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
       <div class="contact">
         <div style="font-weight:600;color:var(--accent)">Siap kerja: freelance / kontrak</div>
-        <a class="download" href="CV_Pahlupi.pdf" target="_blank">Download CV</a>
+        <a class="download" href="CV ATS PAHLUPI SUPON.pdf" target="_blank">Download CV</a>
       </div>
     </header>
 
