--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </div>
 
         <div class="proj">
-          <h3 style="margin:0">Dashboard Laporan Keuangan</h3>
+          <h3 style="margin:0">Dashboard Laporan Dispatch&Monitoring</h3>
           <p style="margin:6px 0;color:var(--muted)">Dashboard bulanan pemasukan & pengeluaran, chart trend, ringkasan KPI.</p>
           <a href="#" target="_blank">Lihat dashboard</a>
         </div>
