--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="proj">
           <h3 style="margin:0">Dashboard Laporan Dispatch&Monitoring</h3>
           <p style="margin:6px 0;color:var(--muted)">Dashboard bulanan pemasukan & pengeluaran, chart trend, ringkasan KPI.</p>
-          <a href="#" target="_blank">Lihat dashboard</a>
+          <a href="#" target="DASHBOARD1.png">Lihat dashboard</a>
         </div>
 
         <div class="proj">
