--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
         <div class="proj">
           <h3 style="margin:0">Analisis Penjualan & HPP Jus Buah</h3>
           <p style="margin:6px 0;color:var(--muted)">Menghitung HPP per botol 250ml, model subsidi silang, simulasi margin — Excel (spreadsheet HPP & asumsi biaya).</p>
-          <a href="#" target="_blank">Lihat detail</a>
+          <a href="DASHBOARD1.png" target="_blank">Lihat detail</a>
         </div>
 
         <div class="proj">
           <h3 style="margin:0">Dashboard Laporan Dispatch&Monitoring</h3>
           <p style="margin:6px 0;color:var(--muted)">Dashboard bulanan pemasukan & pengeluaran, chart trend, ringkasan KPI.</p>
-          <a href="#" target="DASHBOARD1.png">Lihat dashboard</a>
+          <a href="#" target="_blank">Lihat dashboard</a>
         </div>
 
         <div class="proj">
