--- a/index.html
+++ b/index.html
@@ -70,30 +70,30 @@
     <section class="card">
       <h2 style="margin:0 0 8px 0">Proyek Pilihan</h2>
       <div class="projects">
-        <div class="proj">
-          <h3 style="margin:0">Analisis Penjualan & HPP Jus Buah</h3>
-          <p style="margin:6px 0;color:var(--muted)">Menghitung HPP per botol 250ml, model subsidi silang, simulasi margin — Excel (spreadsheet HPP & asumsi biaya).</p>
-          <a href="DASHBOARD1.png" target="_blank">Lihat detail</a>
-        </div>
+  <div class="card">
+    <h3>Analisis Penjualan & HPP Jus Buah</h3>
+    <p>Menghitung HPP per botol 250ml, model subsidi silang, simulasi margin — Excel (spreadsheet HPP & asumsi biaya).</p>
+    <a href="files/HPP_JusBuah.xlsx" target="_blank">Lihat detail</a>
+  </div>
 
-        <div class="proj">
-          <h3 style="margin:0">Dashboard Laporan Dispatch&Monitoring</h3>
-          <p style="margin:6px 0;color:var(--muted)">Dashboard bulanan pemasukan & pengeluaran, chart trend, ringkasan KPI.</p>
-          <a href="#" target="_blank">Lihat dashboard</a>
-        </div>
+  <div class="card">
+    <h3>Dashboard Laporan Dispatch & Monitoring</h3>
+    <p>Dashboard bulanan pemasukan & pengeluaran, chart trend, ringkasan KPI.</p>
+    <a href="DASHBOARD1.png" target="_blank">Lihat dashboard</a>
+  </div>
 
-        <div class="proj">
-          <h3 style="margin:0">Absensi Berdasarkan Kriteria</h3>
-          <p style="margin:6px 0;color:var(--muted)">Format & logika absensi otomatis menggunakan Google Sheets + formula dan validasi.</p>
-          <a href="#" target="_blank">Contoh format</a>
-        </div>
+  <div class="card">
+    <h3>Absensi Berdasarkan Kriteria</h3>
+    <p>Format & logika absensi otomatis menggunakan Google Sheets + formula dan validasi.</p>
+    <a href="https://docs.google.com/spreadsheets/d/abc123" target="_blank">Contoh format</a>
+  </div>
 
-        <div class="proj">
-          <h3 style="margin:0">Chart Readability Improvement</h3>
-          <p style="margin:6px 0;color:var(--muted)">Perbaikan label peta/chart agar nama kota terbaca rapi dan jelas di export PDF/PNG.</p>
-          <a href="#" target="_blank">Preview</a>
-        </div>
-      </div>
+  <div class="card">
+    <h3>Chart Readability Improvement</h3>
+    <p>Perbaikan label peta/chart agar nama kota terbaca rapi dan jelas di export PDF/PNG.</p>
+    <a href="images/chart_preview.png" target="_blank">Preview</a>
+  </div>
+</div>
     </section>
 
     <footer>© 2025 Pahlupi — Built with ❤️ • GitHub: github.com/Pahlupi</footer>
