--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   <div class="card">
     <h3>Dashboard Laporan Dispatch & Monitoring</h3>
     <p>Dashboard bulanan pemasukan & pengeluaran, chart trend, ringkasan KPI.</p>
-    <a href="images/DASHBOARD1.png" target="_blank">Lihat dashboard</a>
+    <a href="images/DASHBOARD2.png" target="_blank">Lihat dashboard</a>
   </div>
 
   <div class="card">
@@ -91,7 +91,7 @@
   <div class="card">
     <h3>Chart Readability Improvement</h3>
     <p>Perbaikan label peta/chart agar nama kota terbaca rapi dan jelas di export PDF/PNG.</p>
-    <a href="images/chart_preview.png" target="_blank">Preview</a>
+    <a href="images/DASHBOARD2.png" target="_blank">Preview</a>
   </div>
 </div>
     </section>
