--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   <div class="card">
     <h3>Dashboard Laporan Dispatch & Monitoring</h3>
     <p>Dashboard bulanan pemasukan & pengeluaran, chart trend, ringkasan KPI.</p>
-    <a href="DASHBOARD1.png" target="_blank">Lihat dashboard</a>
+    <a href="DASBOARD111.png" target="_blank">Lihat dashboard</a>
   </div>
 
   <div class="card">
