--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
   <div class="card">
     <h3>Dashboard Laporan Dispatch & Monitoring</h3>
-    <p>Dashboard bulanan pemasukan & pengeluaran, chart trend, ringkasan KPI.</p>
+    <p>Dashboard bulanan ticketing, aging & revisit,  chart trend, ringkasan performance.</p>
     <a href="DASBOARD111.png" target="_blank">Lihat dashboard</a>
   </div>
 
