--- a/index.html
+++ b/index.html
@@ -59,10 +59,9 @@
       <h2 style="margin:0 0 8px 0">Tentang Saya</h2>
       <p style="margin:0;color:var(--muted)">Saya sedang belajar menjadi Data Analyst. Berpengalaman membuat laporan dan analisis menggunakan Excel, membuat dashboard sederhana, dan melakukan EDA untuk menemukan insight bisnis praktis.</p>
       <div class="skills" style="margin-top:12px">
-        <div class="chip">Excel (Pivot, VLOOKUP)</div>
+        <div class="chip">Excel (Pivot, VLOOKUP,HLOOKUP,LOGICAL IF)</div>
         <div class="chip">SQL (dasar)</div>
-        <div class="chip">Google Data Studio</div>
-        <div class="chip">Python (pandas)</div>
+        <div class="chip">Looker Studio</div>
         <div class="chip">Data Cleaning</div>
       </div>
     </section>
@@ -80,6 +79,9 @@
     <h3>Dashboard Laporan Dispatch & Monitoring</h3>
     <p>Dashboard bulanan ticketing, aging & revisit,  chart trend, ringkasan performance.</p>
     <a href="DASBOARD111.png" target="_blank">Lihat dashboard</a>
+    <h3>Dashboard Laporan Dispatch & Monitoring</h3>
+    <p>Dashboard bulanan ticketing, aging & revisit,  chart trend, ringkasan performance.</p>
+    <a href="DASBOARD2.png" target="_blank">Lihat dashboard</a>
   </div>
 
   <div class="card">
