--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Portofolio — Pahlupi</title>
+  <title>Portofolio — Pahlupi Supon</title>
   <style>
     :root{
       --bg:#FFFDF6;
@@ -45,8 +45,8 @@
       <img class="avatar" src="PROFILE1.png" alt="Avatar">
       <div>
         <h1>Pahlupi</h1>
-        <div class="sub">Data Analyst (Pemula) — fokus Excel, dashboard & EDA</div>
-        <div style="margin-top:8px;color:var(--muted);font-size:14px">Email: pahlupi@example.com • LinkedIn: linkedin.com/in/pahlupi</div>
+        <div class="sub">Data Analyst (Pemula) — Excel, Looker studio & EDA</div>
+        <div style="margin-top:8px;color:var(--muted);font-size:14px">Email: pahlupisupon@gmail.com • LinkedIn: linkedin.com/in/pahlupi</div>
       </div>
 
       <div class="contact">
@@ -59,8 +59,9 @@
       <h2 style="margin:0 0 8px 0">Tentang Saya</h2>
       <p style="margin:0;color:var(--muted)">Saya sedang belajar menjadi Data Analyst. Berpengalaman membuat laporan dan analisis menggunakan Excel, membuat dashboard sederhana, dan melakukan EDA untuk menemukan insight bisnis praktis.</p>
       <div class="skills" style="margin-top:12px">
-        <div class="chip">Excel (Pivot, VLOOKUP,HLOOKUP,LOGICAL IF)</div>
-        <div class="chip">SQL (dasar)</div>
+        <div class="chip">MS.Word Basic - Advance </div>
+        <div class="chip">MS.Excel Intermediate </div>
+        <div class="chip">SQL Basic</div>
         <div class="chip">Looker Studio</div>
         <div class="chip">Data Cleaning</div>
       </div>
@@ -69,36 +70,28 @@
     <section class="card">
       <h2 style="margin:0 0 8px 0">Proyek Pilihan</h2>
       <div class="projects">
-  <div class="card">
-    <h3>Analisis Penjualan & HPP Jus Buah</h3>
-    <p>Menghitung HPP per botol 250ml, model subsidi silang, simulasi margin — Excel (spreadsheet HPP & asumsi biaya).</p>
-    <a href="files/HPP_JusBuah.xlsx" target="_blank">Lihat detail</a>
-  </div>
-
+  
   <div class="card">
     <h3>Dashboard Laporan Dispatch & Monitoring</h3>
     <p>Dashboard bulanan ticketing, aging & revisit,  chart trend, ringkasan performance.</p>
     <a href="DASBOARD111.png" target="_blank">Lihat dashboard</a>
-    <h3>Dashboard Laporan Dispatch & Monitoring</h3>
-    <p>Dashboard bulanan ticketing, aging & revisit,  chart trend, ringkasan performance.</p>
-    <a href="DASBOARD2.png" target="_blank">Lihat dashboard</a>
   </div>
 
   <div class="card">
-    <h3>Absensi Berdasarkan Kriteria</h3>
-    <p>Format & logika absensi otomatis menggunakan Google Sheets + formula dan validasi.</p>
+    <h3>Monitoring reporting</h3>
+    <p>Format & logika Reminder,Revisit & Sequence.</p>
     <a href="https://docs.google.com/spreadsheets/d/abc123" target="_blank">Contoh format</a>
   </div>
 
   <div class="card">
-    <h3>Chart Readability Improvement</h3>
-    <p>Perbaikan label peta/chart agar nama kota terbaca rapi dan jelas di export PDF/PNG.</p>
-    <a href="DASHBOARD2.png" target="_blank">Preview</a>
+    <h3>Sharing Class excel</h3>
+    <p>Sharing class excel basic - intermediate untuk all divisi.</p>
+    <a href="DASBOARD2.png" target="_blank">Preview</a>
   </div>
 </div>
     </section>
 
-    <footer>© 2025 Pahlupi — Built with ❤️ • GitHub: github.com/Pahlupi</footer>
+    <footer>© 2025 Pahlupi — IG @pahlupis, FB @Pahlupi Supon • GitHub: github.com/Pahlupi</footer>
   </div>
 </body>
 </html>
