--- a/index.html
+++ b/index.html
@@ -82,6 +82,12 @@
     <p>Format & logika Reminder,Revisit & Sequence.</p>
     <a href="https://docs.google.com/spreadsheets/d/abc123" target="_blank">Contoh format</a>
   </div>
+    
+  <div class="card">
+    <h3>Sertificate</h3>
+    <p>All Sertificate.</p>
+    <a href="" target="_blank">Contoh format</a>
+  </div>
 
   <div class="card">
     <h3>Sharing Class excel</h3>
