--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   <div class="card">
     <h3>Sertificate</h3>
     <p>All Sertificate.</p>
-    <a href="" target="_blank">Contoh format</a>
+    <a href="ALLSERTI.pdf" target="_blank">Contoh format</a>
   </div>
 
   <div class="card">
