--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <header>
       <img class="avatar" src="PROFILE1.png" alt="Avatar">
       <div>
-        <h1>Pahlupi</h1>
+        <h1>Pahlupi Supon</h1>
         <div class="sub">Data Analyst (Pemula) — Excel, Looker studio & EDA</div>
         <div style="margin-top:8px;color:var(--muted);font-size:14px">Email: pahlupisupon@gmail.com • LinkedIn: linkedin.com/in/pahlupi</div>
       </div>
